Fix T100191: Crash with the wave modifier using normals in edit-mode